<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Information">

    <TextView
        android:id="@+id/label_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/label_about_app"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#BFA6A4A4"
        android:gravity="center"
        android:text="@string/info_about_app"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/label_about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/label_about_me"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#BFA6A4A4"
        android:gravity="center"
        android:text="@string/info_about_me"
        android:textSize="18sp" />
</LinearLayout>